{
    "name": "TouchAction",
    "maps": [
        {
            "name": "Touch",
            "id": "a85a235f-9629-4b4a-a513-c341e8c91fd5",
            "actions": [
                {
                    "name": "TouchPos",
                    "type": "Value",
                    "id": "20a5d0b8-6c2c-4e56-9894-af3a92bd0b9b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "93db4598-de8a-4f6b-9e71-ac15b2254e5d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "41682985-e7de-49fe-8b04-21d8367d6cc9",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "660e00a3-b0b6-4689-9c5e-be85327c09b2",
                    "path": "<Touchscreen>/primaryTouch/startPosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36b08db2-2306-4342-8d21-fae2e059ae6a",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameStick",
            "id": "c51a9d5b-ecf4-4626-809d-7f860f4bd339",
            "actions": [
                {
                    "name": "PlayerMove",
                    "type": "Value",
                    "id": "a95b751d-2cf3-49e3-ba87-5018c2fe0114",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ButtonA",
                    "type": "Button",
                    "id": "3e660d9a-bf97-4484-a09f-587d20eff919",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4fcdd9bb-a408-4116-81c2-1d307a6e3d15",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PlayerMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6957500f-cf32-4d8b-b34d-8eaf58f2666f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ButtonA",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}